--- a/views/index.jade
+++ b/views/index.jade
@@ -6,14 +6,40 @@ html
     script(src="http://code.jquery.com/jquery-1.10.0.min.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js")
     script(type="text/javascript").
-      var data = [
-        {author: "Pete Hunt", text: "This is one comment"},
-        {author: "Jordan Walke", text: "This is *another* comment"}
-      ];
+      var data = {
+        customers: [
+          {id: 0, firstName: "Paul", lastName: "Milham", email: "domreinalabaster@gmail.com"},
+          {id: 1, firstName: "Wesley", lastName: "Churchill", email: "wesley.churchill@freemail.com"},
+          {id: 2, firstName: "Becky", lastName: "Squeeker", email: "domreinalabaster@hotmail.com"},
+        ],
+        onCustomerSelected: function(customerId) {
+          console.log("HERERJEREJR: " + customerId);
+          //- populate form
+        }
+      }
   body
     div(class="container")
       div(class="row")
-        div(id="content")
+        h3 Customers
+        div(id="customerGridContainer")
+        //- div(id="customerUpdateFormContainer")
+        form(role="form")
+          div(class="form-group")
+            label(for="firstNameInput") First Name
+            input(type="text", class="form-control", id="firstNameInput")
+          div(class="form-group")
+            label(for="lastNameInput") Last Name
+            input(type="text", class="form-control", id="lastNameInput")
+          div(class="form-group")
+            label(for="emailInput") Email
+            input(type="email", class="form-control", id="emailInput")
+          div(class="form-group")
+            label(for="phoneInput") Phone #
+            input(type="text", class="form-control", id="phoneInput")
+          div(class="form-group")
+            label(for="birthdateInput") Birthdate
+            input(type="text", class="form-control", id="birthdateInput")
+          button(type="submit", class="btn btn-default") Update
         script(type="text/jsx", src="/components.jsx")
         //- h3 Customers
         //- table(class="table table-striped table-hover")
