--- a/views/index.jade
+++ b/views/index.jade
@@ -5,35 +5,42 @@ html
     link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
     script(src="http://code.jquery.com/jquery-1.11.0.min.js")
     script(type="text/javascript").
-      var data = {
-        customers: [
-          {id: 0, firstName: "Paul", lastName: "Milham", email: "domreinalabaster@gmail.com"},
-          {id: 1, firstName: "Wesley", lastName: "Churchill", email: "wesley.churchill@freemail.com"},
-          {id: 2, firstName: "Becky", lastName: "Squeeker", email: "domreinalabaster@hotmail.com"},
-        ],
-        onCustomerSelected: function(customerId) {
-          console.log("HERERJEREJR: " + customerId);
-          //- populate form with data from server
-          $.ajax({
-            type: "POST",
-            url: "/customer/details",
-            data: {userId: customerId},
-            success: function(data) {
-              console.log(data);
-            },
-            error: function(error) {
-              console.log(error);
-            },
-            dataType: "json"
-          });
-        }
+      function onCustomerSelected(customerId) {
+        console.log("HERERJEREJR: " + customerId);
+        console.log({params: {customerId: customerId}});
+        //- populate form with data from server
+        $.ajax({
+          type: "POST",
+          contentType: "application/json;charset=UTF-8",
+          url: "/customer/details",
+          data: JSON.stringify({params: {customerId: customerId}}),
+          dataType: "json",
+          //- data: "hello",
+          success: function(data) {
+            console.log(data);
+            if (data.status) {
+              $("#firstNameInput").val(data.customer.first_name);
+              $("#lastNameInput").val(data.customer.last_name);
+              $("#emailInput").val(data.customer.email);
+              $("#phoneInput").val(data.customer.phone);
+              $("#birthDateInput").val(data.customer.birth_date);
+            }
+          },
+          error: function(error) {
+            console.log(error);
+          }
+        });
       }
+
+      function updateCustomer() {
+        
+      }
+
   body
     div(class="container")
       div(class="row")
         h3 Customers
         div(id="customerGridContainer")
-        //- div(id="customerUpdateFormContainer")
         form(role="form")
           div(class="form-group")
             label(for="firstNameInput") First Name
@@ -48,27 +55,13 @@ html
             label(for="phoneInput") Phone #
             input(type="text", class="form-control", id="phoneInput")
           div(class="form-group")
-            label(for="birthdateInput") Birthdate
-            input(type="text", class="form-control", id="birthdateInput")
+            label(for="birthDateInput") Date of Birth
+            input(type="text", class="form-control", id="birthDateInput")
           button(type="submit", class="btn btn-default") Update
         script(type="text/jsx", src="/components.jsx")
-        //- h3 Customers
-        //- table(class="table table-striped table-hover")
-        //-   thead
-        //-     tr
-        //-       th First Name
-        //-       th Last Name
-        //-       th Email
-        //-   tbody(id="customerTableBody")
-        //-     tr
-        //-       td 1
-        //-       td 2
-        //-       td 3
-        //-     tr
-        //-       td 1
-        //-       td 2
-        //-       td 3
-        //-     tr
-        //-       td 1
-        //-       td 2
-        //-       td 3
+        script(type="text/jsx").
+          /** @jsx React.DOM */
+          React.renderComponent(
+            <CustomerGrid onClick={onCustomerSelected}/>,
+            document.getElementById('customerGridContainer')
+          );
