updated README, database schema

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,6 +61,9 @@ html
       div(class="row")
         h3 Customers
         div(id="customerGridContainer")
+      div(class="row")
+        div(id="pageDivider", style="background-color:lightgray;height:3px;margin-bottom:20px;")
+      div(class="row")
         form(role="form")
           input(type="hidden", id="idInput")
           div(class="form-group")
